--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1> this is my profile</h1>
     <a href="/helloRender">this is my hello from Render</a>
+    <br>
+    <a href="/ejs">ejs stuff</a>
 </body>
 </html>
